# ymlstash

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_stash.py
ymlstash/: __init__.py  stash.py
