[tool.poetry]
name = "ymlstash"
version = "1.0.1"
description = "A simple ORM-like utility for operating on local YAML files via Python dataclasses"
authors = ["Yuval Adam <_@yuv.al>"]
readme = "README.md"
license = "MIT"

[project.urls]
Homepage = "https://github.com/yuvadm/ymlstash"
Repository = "https://github.com/yuvadm/ymlstash"
Issues = "https://github.com/yuvadm/ymlstash/issues"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
