[tool.poetry]
name = "ymlstash"
version = "1.0.2"
description = "A simple ORM-like utility for operating on local YAML files via Python dataclasses"
authors = ["Yuval Adam <_@yuv.al>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yuvadm/ymlstash"
repository = "https://github.com/yuvadm/ymlstash"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
